stdouts/firehose-client
/root/Targets/firehose-client
└─┬ firehose-client@1.2.0 
  ├── coffee-script@1.12.7 
  ├── jquery@2.2.4 
  ├─┬ jsdom@9.12.0 
  │ ├── abab@1.0.4 
  │ ├── acorn@4.0.13 
  │ ├── acorn-globals@3.1.0 
  │ ├── array-equal@1.0.0 
  │ ├── content-type-parser@1.0.1 
  │ ├── cssom@0.3.2 
  │ ├── cssstyle@0.2.37 
  │ ├─┬ escodegen@1.9.0 
  │ │ ├── esprima@3.1.3 
  │ │ ├── estraverse@4.2.0 
  │ │ ├── esutils@2.0.2 
  │ │ ├─┬ optionator@0.8.2 
  │ │ │ ├── deep-is@0.1.3 
  │ │ │ ├── fast-levenshtein@2.0.6 
  │ │ │ ├── levn@0.3.0 
  │ │ │ ├── prelude-ls@1.1.2 
  │ │ │ ├── type-check@0.3.2 
  │ │ │ └── wordwrap@1.0.0 
  │ │ └── source-map@0.5.7 
  │ ├── html-encoding-sniffer@1.0.1 
  │ ├── nwmatcher@1.4.2 
  │ ├── parse5@1.5.1 
  │ ├─┬ request@2.83.0 
  │ │ ├── aws-sign2@0.7.0 
  │ │ ├── aws4@1.6.0 
  │ │ ├── caseless@0.12.0 
  │ │ ├─┬ combined-stream@1.0.5 
  │ │ │ └── delayed-stream@1.0.0 
  │ │ ├── extend@3.0.1 
  │ │ ├── forever-agent@0.6.1 
  │ │ ├─┬ form-data@2.3.1 
  │ │ │ └── asynckit@0.4.0 
  │ │ ├─┬ har-validator@5.0.3 
  │ │ │ ├─┬ ajv@5.2.3 
  │ │ │ │ ├── co@4.6.0 
  │ │ │ │ ├── fast-deep-equal@1.0.0 
  │ │ │ │ ├── json-schema-traverse@0.3.1 
  │ │ │ │ └─┬ json-stable-stringify@1.0.1 
  │ │ │ │   └── jsonify@0.0.0 
  │ │ │ └── har-schema@2.0.0 
  │ │ ├─┬ hawk@6.0.2 
  │ │ │ ├── boom@4.3.1 
  │ │ │ ├─┬ cryptiles@3.1.2 
  │ │ │ │ └── boom@5.2.0 
  │ │ │ ├── hoek@4.2.0 
  │ │ │ └── sntp@2.0.2 
  │ │ ├─┬ http-signature@1.2.0 
  │ │ │ ├── assert-plus@1.0.0 
  │ │ │ ├─┬ jsprim@1.4.1 
  │ │ │ │ ├── extsprintf@1.3.0 
  │ │ │ │ ├── json-schema@0.2.3 
  │ │ │ │ └─┬ verror@1.10.0 
  │ │ │ │   └── core-util-is@1.0.2 
  │ │ │ └─┬ sshpk@1.13.1 
  │ │ │   ├── asn1@0.2.3 
  │ │ │   ├── bcrypt-pbkdf@1.0.1 
  │ │ │   ├── dashdash@1.14.1 
  │ │ │   ├── ecc-jsbn@0.1.1 
  │ │ │   ├── getpass@0.1.7 
  │ │ │   ├── jsbn@0.1.1 
  │ │ │   └── tweetnacl@0.14.5 
  │ │ ├── is-typedarray@1.0.0 
  │ │ ├── isstream@0.1.2 
  │ │ ├── json-stringify-safe@5.0.1 
  │ │ ├─┬ mime-types@2.1.17 
  │ │ │ └── mime-db@1.30.0 
  │ │ ├── oauth-sign@0.8.2 
  │ │ ├── performance-now@2.1.0 
  │ │ ├── qs@6.5.1 
  │ │ ├── safe-buffer@5.1.1 
  │ │ ├── stringstream@0.0.5 
  │ │ ├── tunnel-agent@0.6.0 
  │ │ └── uuid@3.1.0 
  │ ├── sax@1.2.4 
  │ ├── symbol-tree@3.2.2 
  │ ├─┬ tough-cookie@2.3.3 
  │ │ └── punycode@1.4.1 
  │ ├── webidl-conversions@4.0.2 
  │ ├─┬ whatwg-encoding@1.0.1 
  │ │ └── iconv-lite@0.4.13 
  │ ├─┬ whatwg-url@4.8.0 
  │ │ ├── tr46@0.0.3 
  │ │ └── webidl-conversions@3.0.1 
  │ └── xml-name-validator@2.0.1 
  ├─┬ ws@1.1.4 
  │ ├── options@0.0.6 
  │ └── ultron@1.0.2 
  └── xmlhttprequest@1.8.0 

Setup Done exists, not setting up
:../FeatureTester/libs/:/root/Targets/firehose-client/node_modules
Set Default Z3_PATH to ./node_modules/z3javascript/bin/libz3.so
ExpoSE Master: /root/ExpoSE/lib/Harness/src/harness.js max concurrent: 16 max paths: 1000000
Setting timeout to 900000
*** [0 done /0 queued / 1 running / 0 errors / 0% coverage ] ****** [0 done /0 queued / 1 running / 0 errors / 0% coverage ] ****** [1 done /0 queued / 0 running / 1 errors / 88% coverage ] ***
*-- Stat Module Output --*
*-- concretizations: ["defineProperty","bound log","call","join","charCodeAt","lastIndexOf","RegExp","apply","pop","splice","create","reverse","sort","abs","stringify","toUpperCase","parseFloat","SyntaxError"]
*-- Stat Module Done --*
*-- Test Case {"_bound":0} start 0.0531 took 133.3062s
*-- Errors occured in test {"_bound":0}
* Error: /root/Targets/firehose-client/node_modules/firehose-client/lib/firehose/web_socket_transport.coffee:15:3: error: invalid object key
  @ieSupported:-> (document.documentMode || 10) > 9
  ^^^^^^^^^^^^
*-- Replay with NO_COMPILE=1 expoSE replay '/root/ExpoSE/lib/Harness/src/harness.js' '{"_bound":0}'
*-- Coverage Data
*- File /root/ExpoSE/lib/Harness/src/harness.js. Coverage (Term): 18% Coverage (LOC): 24%
*- File /root/ExpoSE/lib/S$/bin/symbols.js. Coverage (Term): 16% Coverage (LOC): 34%
*- File /root/Targets/firehose-client/node_modules/firehose-client/lib/index.js. Coverage (Term): 80% Coverage (LOC): 100%
*- File /root/Targets/firehose-client/node_modules/coffee-script/register.js. Coverage (Term): 94% Coverage (LOC): 100%
*- File /root/Targets/firehose-client/node_modules/coffee-script/lib/coffee-script/register.js. Coverage (Term): 80% Coverage (LOC): 79%
*- File /root/Targets/firehose-client/node_modules/coffee-script/lib/coffee-script/coffee-script.js. Coverage (Term): 40% Coverage (LOC): 47%
*- File /root/Targets/firehose-client/node_modules/coffee-script/lib/coffee-script/lexer.js. Coverage (Term): 65% Coverage (LOC): 73%
*- File /root/Targets/firehose-client/node_modules/coffee-script/lib/coffee-script/rewriter.js. Coverage (Term): 86% Coverage (LOC): 90%
*- File /root/Targets/firehose-client/node_modules/coffee-script/lib/coffee-script/helpers.js. Coverage (Term): 58% Coverage (LOC): 65%
*- File /root/Targets/firehose-client/node_modules/coffee-script/lib/coffee-script/parser.js. Coverage (Term): 82% Coverage (LOC): 98%
*- File /root/Targets/firehose-client/node_modules/coffee-script/lib/coffee-script/sourcemap.js. Coverage (Term): 82% Coverage (LOC): 86%
*- File /root/Targets/firehose-client/node_modules/coffee-script/lib/coffee-script/nodes.js. Coverage (Term): 46% Coverage (LOC): 57%
*- File /root/Targets/firehose-client/node_modules/coffee-script/lib/coffee-script/scope.js. Coverage (Term): 71% Coverage (LOC): 80%
*- Re-run with EXPOSE_PRINT_COVERAGE=1 to print line by line coverage information
** ExpoSE Finished. 1 paths with 1 errors **
